# dune-grid-howto

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  COPYING  INSTALL  LICENSE.md  Makefile.am  README  README.md  adaptivefinitevolume.cc  adaptiveintegration.cc  autogen.sh  basicunitcube.hh  configure.ac  dune-grid-howto-config.cmake.in  dune-grid-howto.pc.in  dune.module  elementdata.hh  evolve.hh  finiteelements.cc  finitevolume.cc  finitevolumeadapt.hh  functors.hh  gettingstarted.cc  groundwater.cc  groundwateradapt.hh  groundwaterproblem.hh  initialize.hh  integrate.hh  integrate_domain.hh  integrate_entity.hh  integrateentity.hh  integration.cc  othergrids.cc  parevolve.hh  parfinitevolume.cc  parfvdatahandle.hh  shapefunctions.hh  stamp-vc  (+16 more)
cmake/modules/: CMakeLists.txt  Makefile.am
cmake/pkg/: Makefile.am  dune-grid-howto-config.cmake.in
doc/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.dist.am  dune.cfg  grid-howto.bib  grid-howto.tex  index.wml  tex4ht.env
doc/EPS/: .gitignore  Makefile.am  adaptiveintegration_alberta2d.eps  adaptiveintegration_ug3d.eps  alberta2d-view1.eps  alberta2d-view2.eps  alberta2d.eps  alberta3d.eps  alucube3d.eps  alusimplex3d.eps  conc.eps  intersection.eps  intersection.fig  islocalref.eps  islocalref.fig  iso.eps  partitionsingle.eps  ug2dquad-view1.eps  ug2dquad-view2.eps  ug2dtri-view1.eps  ug2dtri-view2.eps  ugcube2d.eps  ugcube3d.eps  ugsimplex2d.eps  ugsimplex3d.eps  yasp3d.eps
doc/img/: .gitignore  CMakeLists.txt
grids/: 2dsimplex.alu  CMakeLists.txt  Makefile.am  quadgrid.am  trianggrid.am  ug3dhexagrid.am  ug3dtetragrid.am  unitcube1.dgf
