EXTRA_DISTS = adaptiveintegration_alberta2d.eps \
	adaptiveintegration_alberta2d.jpg adaptiveintegration_ug3d.eps \
	adaptiveintegration_ug3d.jpg alberta2d-view1.eps alberta2d-view1.jpg \
	alberta2d-view2.eps alberta2d-view2.jpg alberta2d.eps alberta2d.jpg \
	alberta3d.eps alberta3d.jpg alucube3d.eps alucube3d.jpg \
	alusimplex3d.eps alusimplex3d.jpg conc.eps conc.jpg intersection.eps \
	islocalref.eps iso.eps iso.jpg partitionsingle.eps ug2dquad-view1.eps \
	ug2dquad-view1.jpg ug2dquad-view2.eps ug2dquad-view2.jpg \
	ug2dtri-view1.eps ug2dtri-view1.jpg ug2dtri-view2.eps \
	ug2dtri-view2.jpg ugcube2d.eps ugcube2d.jpg ugcube3d.eps }\
	ugcube3d.jpg ugsimplex2d.eps ugsimplex2d.jpg ugsimplex3d.eps \
	ugsimplex3d.jpg yasp3d.eps yasp3d.jpg
